[tool.poetry]
name = "shadowsocks-async"
version = "0.1.0"
description = "shadowsocks built with asyncio."
authors = ["laoshan-taoist <65347330+laoshan-taoist@users.noreply.github.com>"]
license = "AGPLv3"
packages = [
    { include = "shadowsocks" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
fire = "^0.3.1"
sentry-sdk = "^0.19.5"
peewee = "^3.14.0"
httpx = "^0.16.1"
cryptography = "^3.3.1"
hkdf = "^0.0.3"
uvloop = "^0.14.0"
bloom-filter = "^1.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.poetry.scripts]
asyncss = "shadowsocks.server:main"

[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
